--- a/Index.html
+++ b/Index.html
@@ -84,7 +84,7 @@
             documented. The system should be able to record and store data of
             the registered members, sporting activities, items and details about
             the club patrons. <br />
-            <a href="kcse2023.html">Click here to view more.</a>
+            <a href="kcse2023.html">Click here to view more. <i class="bi bi-arrow-up-right"></i></a>
           </p>
           <div class="cs_img">
             <img src="./components/banner (2).jpg" alt="" />
@@ -102,7 +102,7 @@
             store, record and give reports on the various transport services
             offered to the customers. It should also be able to capture data on
             all the drivers and vehicles that are owned by the company. <br />
-            <a href="#">Click here to view more.</a>
+            <a href="#">Click here to view more. <i class="bi bi-arrow-up-right"></i></a>
           </p>
           <div class="cs_img">
             <img src="./components/nms thumbnai;l (2).PNG" alt="" />
@@ -110,6 +110,9 @@
         </div>
       </div>
     </section>
+    <div class="endnote">More content coming soon....</div>
+
+
     <footer>
       <div class="footer-content">
         <div class="social-media">
