--- a/Queries.html
+++ b/Queries.html
@@ -59,7 +59,7 @@
         below in which I explain in detail about queries.
       </p>
       <iframe
-        width="900"
+        width="1000"
         height="500"
         src="https://www.youtube.com/embed/x1i_9q3Q4gI"
         title="YouTube video player"
@@ -100,7 +100,7 @@
           <img src="./components/banner (2).jpg" alt="" />
         </div>
       </div>
-      <p>Once we complete the queries we will now make the input forms.</p>
+      <p class="footnote">Once we complete the queries we will now make the input forms.</p>
     </div>
     <div class="tbl_lnk">
       <p>Next step: Crating Queries.</p>
