--- a/Tables.html
+++ b/Tables.html
@@ -28,7 +28,7 @@
         <i class="fas fa-bars"></i>
       </label>
       <ul>
-        <li><a class="active" href="Index.html">Home</a></li>
+        <li><a href="Index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="#">Contacts</a></li>
       </ul>
@@ -55,7 +55,7 @@
         development step by step.
       </p>
       <iframe
-        width="900"
+        width="1000"
         height="500"
         src="https://www.youtube.com/embed/x1i_9q3Q4gI"
         title="YouTube video player"
@@ -71,7 +71,7 @@
         that we are giong to use are:
       </p>
       <ul>
-        <li><>0 - Enter a nonzero value.</li>
+        <li>< >0 - Enter a nonzero value.</li>
         <li>
           >=0 - Value must be zero or greater or You must enter a positive
           number.
