--- a/kcse2023.html
+++ b/kcse2023.html
@@ -29,7 +29,7 @@
         <i class="fas fa-bars"></i>
       </label>
       <ul>
-        <li><a class="active" href="Index.html">Home</a></li>
+        <li><a href="Index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="#">Contacts</a></li>
       </ul>
