--- a/Queries.html
+++ b/Queries.html
@@ -103,7 +103,7 @@
       <p class="footnote">Once we complete the queries we will now make the input forms.</p>
     </div>
     <div class="tbl_lnk">
-      <p>Next step: Crating Queries.</p>
+      <p>Next step: Creating Forms.</p>
       <a class="tables_lnk_continue" href="Forms.html"
         >Continue <i class="bi bi-chevron-right"></i
       ></a>
@@ -157,9 +157,9 @@
       </div>
       <div class="links">
         <h2 class="foot-head">Important Links</h2>
-        <div class="foot-links"><a href="#">Home</a></div>
-        <div class="foot-links"><a href="#">About</a></div>
-        <div class="foot-links"><a href="#">Contacts</a></div>
+        <div class="foot-links"><a href="Index.html">Home</a></div>
+        <div class="foot-links"><a href="about.html">About</a></div>
+        <div class="foot-links"><a href="contacts.html">Contacts</a></div>
       </div>
     </div>
     <div class="company-logo">CyberGen Technologies</div>
