--- a/Tables.html
+++ b/Tables.html
@@ -96,10 +96,13 @@
       <p>Once we complete the tables we will now make the queries.</p>
     </div>
     <div class="tbl_lnk">
-      <p>Next step: Creating Queries.</p>
-      <a class="tables_lnk" href="Queries.html"
+      <p>Next step: Creating Forms.</p>
+      <a class="tables_lnk_continue" href="queries.html"
         >Continue <i class="bi bi-chevron-right"></i
       ></a>
+      <a class="tables_lnk_back" href="kcse2023.html"
+        ><i class="bi bi-chevron-left"></i
+          >Back </a>
     </div>
   </body>
 
@@ -147,9 +150,9 @@
       </div>
       <div class="links">
         <h2 class="foot-head">Important Links</h2>
-        <div class="foot-links"><a href="#">Home</a></div>
-        <div class="foot-links"><a href="#">About</a></div>
-        <div class="foot-links"><a href="#">Contacts</a></div>
+        <div class="foot-links"><a href="Index.html">Home</a></div>
+        <div class="foot-links"><a href="about.html">About</a></div>
+        <div class="foot-links"><a href="contacts.html">Contacts</a></div>
       </div>
     </div>
     <div class="company-logo">CyberGen Technologies</div>
