--- a/kcse2023.html
+++ b/kcse2023.html
@@ -130,9 +130,9 @@
         </div>
         <div class="links">
           <h2 class="foot-head">Important Links</h2>
-          <div class="foot-links"><a href="#">Home</a></div>
-          <div class="foot-links"><a href="#">About</a></div>
-          <div class="foot-links"><a href="#">Contacts</a></div>
+          <div class="foot-links"><a href="Index.html">Home</a></div>
+          <div class="foot-links"><a href="about.html">About</a></div>
+          <div class="foot-links"><a href="contacts.html">Contacts</a></div>
         </div>
       </div>
       <div class="company-logo">CyberGen Technologies</div>
