--- a/Index.html
+++ b/Index.html
@@ -31,7 +31,7 @@
       <ul>
         <li><a class="active" href="Index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="#">Contacts</a></li>
+        <li><a href="contacts.html">Contacts</a></li>
       </ul>
     </nav>
     <div class="container">
@@ -157,9 +157,9 @@
         </div>
         <div class="links">
           <h2 class="foot-head">Important Links</h2>
-          <div class="foot-links"><a href="#">Home</a></div>
-          <div class="foot-links"><a href="#">About</a></div>
-          <div class="foot-links"><a href="#">Contacts</a></div>
+          <div class="foot-links"><a href="Index.html">Home</a></div>
+          <div class="foot-links"><a href="about.html">About</a></div>
+          <div class="foot-links"><a href="contacts.html">Contacts</a></div>
         </div>
       </div>
       <div class="company-logo">CyberGen Technologies</div>
