--- a/about.html
+++ b/about.html
@@ -1,24 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="about.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="about.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
+      integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e"
+      crossorigin="anonymous"
+    />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav>
-        <div class="logo">CYBERGEN</div>
-        <input type="checkbox" id="click" />
-        <label for="click" class="menu-btn">
-          <i class="fas fa-bars"></i>
-        </label>
-        <ul>
-          <li><a href="Index.html">Home</a></li>
-          <li><a class="active" href="about.html">About</a></li>
-          <li><a href="#">Contacts</a></li>
-        </ul>
-      </nav>
-</body>
+      <div class="logo">CYBERGEN</div>
+      <input type="checkbox" id="click" />
+      <label for="click" class="menu-btn">
+        <i class="fas fa-bars"></i>
+      </label>
+      <ul>
+        <li><a href="Index.html">Home</a></li>
+        <li><a class="active" href="about.html">About</a></li>
+        <li><a href="contacts.html">Contacts</a></li>
+      </ul>
+    </nav>
+    <section>
+      <div class="header">
+        <img
+          src="https://images3.alphacoders.com/813/813087.jpg"
+          alt=""
+        />
+        <h2>ABOUT ME</h2>
+      </div>
+      <div class="content">
+        <img src="./components/CYBERGEN.png" alt="" />
+      </div>
+      <div class="content_container">
+        <img src="./components/CYBERGEN.png" alt="" />
+        <h3>
+          Gideon Kiprono <br />
+          Student Software Developer.
+        </h3>
+      </div>
+      <div class="description">
+        <div class="about">
+          <h3>My Story</h3>
+          <p>
+            I'm a passionate software developer driven by amitions to achieve
+            big in the tech industry. Am also an IT student specializing in
+            Software Development, Network Engineering, Cloud Computing and Power
+            Platform. It has always been my dream to become a software Engineer
+            and I believe than nothing is impossible when you workhard because
+            life is tough and you have to put in alot of effort to achieve what
+            you want. I'm also passionate in Networking and am currently doing
+            Cisco Networking Course (CCNA) which will build my Networking
+            skills. Cloud Computing is also one of my favourite fields in IT
+            since it is a powerful tool in today's businesses and also personal
+            needs, I specialize with Microsoft Azure as my main cloud educator
+            and provider but also interested in Amazon Web Services(AWS) and
+            Google Cloud. I also take courses on Microsoft Power Platform which
+            is a low-code no-code Development platforms that enables you to
+            develop applications with little or no knowledge on coding, this is
+            interesting since it enables me build applications quickly with
+            little effort.
+          </p>
+
+          <h3>Experience</h3>
+          <p>Currently I am a student but that doesn't mean I have no Experience. I am proficient in the following areas:
+              <ul>
+                <li> <img src="./components/icons8-html-5-64.png" alt=""> HTML5</li>
+                <li> <img src="./components/icons8-css3-100.png" alt=""> CSS3</li>
+                <li> <img src="./components/icons8-javascript-48.png" alt=""> JavaScript</li>
+                <li> <img src="./components/icons8-office-365-48.png" alt=""> Microsoft 365</li>
+                <li> <img src="./components/icons8-google-code-48.png" alt=""> Web Development</li>
+                <li><img src="./components/icons8-cloud-computing-64.png" alt=""> Microsoft Azure</li>
+                <li> <img src="./components/icons8-networking-64.png" alt=""> Networking</li>
+              </ul>
+          </p>
+          <p>Each day to me is another opportunity to learn I never get tired of learning and exploring new things that will expand my knowledge for a better future.
+          </p>
+        </div>
+        <div class="fun_facts">
+          <h2>Fun Fact</h2>
+          <p style="font-weight: bold; margin-bottom: 20px;">Google’s Name Comes From A Spelling Error</p>
+          <p>A “googol”, in mathematics, is the number 1 followed by 100 zeros. Page originally wanted to call the search engine googol.
+
+            By the time the company formed, they switched the name to Google. Perhaps the name is easier to spell and looks more friendly on the screen.</p>
+        </div>
+      </div>
+    </section>
+
+
+    <footer>
+      <div class="footer-content">
+        <div class="social-media">
+          <h2 class="foot-head">Find me on</h2>
+          <a href=""
+            ><div class="platforms platform-1">
+              <i class="bi bi-facebook"></i><b> Facebook</b>
+            </div></a
+          >
+          <a href=""
+            ><div class="platforms platform-2">
+              <i class="bi bi-instagram"></i><b> Instagram</b>
+            </div></a
+          >
+          <a href=""
+            ><div class="platforms platform-3">
+              <i class="bi bi-linkedin"></i><b> LinkedIn</b>
+            </div></a
+          >
+          <a href=""
+            ><div class="platforms platform-4">
+              <i class="bi bi-discord"></i><b> Discord</b>
+            </div></a
+          >
+          <a href=""
+            ><div class="platforms platform-5">
+              <i class="bi bi-twitter"></i><b> Twitter</b>
+            </div></a
+          >
+        </div>
+        <div class="contacts">
+          <h2 class="foot-head">Contacts</h2>
+          <div class="phone-number number-1">
+            <i class="bi bi-whatsapp"></i><a href="#">+254 724631983 </a>
+          </div>
+          <div class="phone-number number-2">
+            <i class="bi bi-telegram"></i><a href="#">+254 724631983 </a>
+          </div>
+          <div class="phone-number number-3">
+            <i class="bi bi-telephone"></i> <a href="#">+254 724631983 </a>
+          </div>
+        </div>
+        <div class="links">
+          <h2 class="foot-head">Important Links</h2>
+          <div class="foot-links"><a href="Index.html">Home</a></div>
+          <div class="foot-links"><a href="about.html">About</a></div>
+          <div class="foot-links"><a href="contacts.html">Contacts</a></div>
+        </div>
+      </div>
+      <div class="company-logo">CyberGen Technologies</div>
+    </footer>
+  </body>
 </html>
